# attestation-manager

./: Cargo.toml  Dockerfile  Dockerfile_native  Makefile  README.md  build.rs  replace_key.py
.github/workflows/: ci.yml
keys/: README.md  sp_privkey.pem  sp_pubkey.pem  vendor_key.pem
manager_net/: Cargo.toml
manager_net/src/: enums.rs  lib.rs  net.rs
manager_net/src/structs/: attest_structs.rs  connect_structs.rs  error_struct.rs  getkey_structs.rs  init_structs.rs  mod.rs  reset_structs.rs
src/: data.rs  error.rs  event_loop.rs  handlers.rs  init.rs  lib.rs  logging.rs  main.rs  module.rs  processor.rs
tests/: tls_native.rs
