[package]
name = "manager_net"
version = "0.1.0"
authors = ["Gianluca Scopelliti <gianluca.scopelliti@ericsson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
manager_structs = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.5.1"
strum = "0.20"
strum_macros = "0.20"
